--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
   
-<html>
+<html lang = "en">
   <head>
     <title>Cars and Coffee</title>
   </head>
   <body>
     
   </body>
-  lang = "en"
 </html>
