Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
 <html lang="en">
   <head>
-    <link>
+    <link rel="stylesheet" href="style" itemprop="itemprop" property="property">
     <title>Cars and Coffee</title>
   </head>
   <body>
