--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+  
+<html lang="en">
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Cars and Coffee</title>
+  </head>
+  <body>
+    
+  </body>
+</html>
